fix: extra margin on .mdl-layout__content

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,9 +1,9 @@
 .mdl-layout--fixed-drawer>.mdl-layout__content {
-  margin-left: 7rem;
+  margin-left: 6rem;
 }
 @media screen and (max-width: 1024px) {
   .mdl-layout--fixed-drawer>.mdl-layout__content {
-    margin-left: 1rem;
+    margin-left: 0rem;
   }
 }
 @media screen and (min-width: 1025px) {
