--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,3 +86,7 @@ a {
     }
   }
 }
+
+.section__title {
+  padding: 0 1rem;
+}
